studies on Javascript and html user input

--- a/index.html
+++ b/index.html
@@ -17,4 +17,10 @@
     <p id="ex3"></p>
     <hr><br>
 
- 
+    <!--in JS, you don't need form submits-->
+    <label>username: </label>
+    <input id="username">
+    <br><br>
+    <button id="submitUser">submit</button>
+    <hr><br>
+
