studies on Javascript constants

--- a/index.html
+++ b/index.html
@@ -24,3 +24,14 @@
     <button id="submitUser">submit</button>
     <hr><br>
 
+    <!--Circle Circumference-->
+    <h1 id="circle">Circle Circumference</h1>
+    <label>radius: </label>
+    <input id="radius">
+    <br>
+    <p id="circumference"></p>
+    <br>
+    <button id="submitRadius">submit</button>
+    <hr><br>
+
+  
