creation of a page that counts
an extension of the studies of constants, introducing the use of constants to represent HTML elements

also, the previous commit included the calculation of a circle circumference...

--- a/index.html
+++ b/index.html
@@ -34,4 +34,13 @@
     <button id="submitRadius">submit</button>
     <hr><br>
 
-  
+    <!--a page that counts-->
+    <label id="counter">0</label>
+    <br>
+    <div id="btnContainer">
+        <button id="less" class="countBtn">Decrease</button>
+        <button id="reset" class="countBtn">Reset</button>
+        <button id="more" class="countBtn">Increase</button>
+    </div>
+    <hr><br>
+    
