studies on Javascript Math object
includes a special study on Math.random() with a stylized HTML Random Number Generator that represents a d20 dice roll

--- a/index.html
+++ b/index.html
@@ -44,3 +44,11 @@
     </div>
     <hr><br>
     
+    <!--RNG-->
+    <label id="randNum">--</label>
+    <div id="btnContainer">
+        <br>
+        <button id="randBtn" class="randBtn">Roll d20</button>
+    </div>
+    <hr><br>
+
